--- a/PortofolioD1R4L.html
+++ b/PortofolioD1R4L.html
@@ -16,6 +16,14 @@
       align-items: center;
       animation: fadeIn 2s ease-in-out;
     }
+    .body:hover {
+      transform: translateY(-5px);
+    }
+    @media screen and (max-width: 768px) {
+      .body {
+        flex: 1 1 100%;
+      }
+    }
 
     .container {
       max-width: 900px;
